# punch_gui

./: .gitignore  .opencode.json  CHANGELOG.md  IDEA.md  LICENSE  README.md  TEST_PLAN.md  about.py  credentials.json.default  punch_gui.py  pyproject.toml  requirements.txt  settings.json.default  space.mcharryville.PunchGUI.desktop  space.mcharryville.PunchGUI.json  start.sh
.continue/: rules
.github/workflows/: flatpak.yml
metadata/: app.toml
src/: about.py  credentials_dialog.py
tests/: conftest.py  test_credentials_dialog.py  test_particle.py  test_run_punch_in.py  test_settings.py
